test/data/resolver/valid/var_length_multi_type.cypher
MATCH (p:Person)-[r:AUTHORED|LIKES*1..3]->(post:Post) RETURN r
