test/data/resolver/invalid/var_length_edge.cypher
MATCH (p:Person)-[r:AUTHORED*1..3]->(q:Post) RETURN p
